// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AboutMeView > renders 1`] = `
<section
  class="cockpit-card-variable-height cockpit-card"
  data-v-1451ba78=""
  data-v-d91b9f54=""
  data-v-f444dc92=""
  editable="false"
>
  <!--v-if-->
  <!--v-if-->
  
  
  <div
    class="header mb-2"
    data-v-f444dc92=""
  >
    <div
      class="v-avatar v-theme--light v-avatar--density-default v-avatar--variant-flat avatar d-flex align-center text-font"
      data-v-f444dc92=""
      style="width: 90px; height: 90px;"
    >
      
      
      <v-img-stub
        absolute="false"
        cover="false"
        data-v-f444dc92=""
        eager="false"
        inline="false"
        options="[object Object]"
        src="https://image.url/image.jpg"
        tile="false"
        transition="fade-transition"
      />
      
      
      
      <!---->
      <span
        class="v-avatar__underlay"
      />
      
    </div>
    <div
      class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-theme--light v-locale--is-ltr v-input--dirty v-text-field v-select v-select--single v-select--selected v-select--selection-slot availability"
      data-v-f444dc92=""
    >
      <!---->
      <div
        class="v-input__control"
      >
        
        <div
          class="v-field v-field--active v-field--appended v-field--center-affix v-field--dirty v-field--flat v-field--no-label v-field--variant-filled v-theme--light v-locale--is-ltr"
          role="combobox"
        >
          <div
            class="v-field__overlay"
          />
          <div
            class="v-field__loader"
          >
            <div
              aria-hidden="true"
              aria-valuemax="100"
              aria-valuemin="0"
              class="v-progress-linear v-theme--light v-locale--is-ltr"
              role="progressbar"
              style="top: 0px; height: 0px; --v-progress-linear-height: 2px;"
            >
              <!---->
              <div
                class="v-progress-linear__background"
                style="opacity: NaN;"
              />
              <div
                class="v-progress-linear__buffer"
                style="opacity: NaN; width: 0%;"
              />
              <transition-stub
                appear="false"
                css="true"
                name="fade-transition"
                persisted="false"
              >
                <div
                  class="v-progress-linear__indeterminate"
                >
                  
                  <div
                    class="v-progress-linear__indeterminate long"
                  />
                  <div
                    class="v-progress-linear__indeterminate short"
                  />
                  
                </div>
              </transition-stub>
              <!---->
            </div>
          </div>
          <!---->
          <div
            class="v-field__field"
            data-no-activator=""
          >
            <!---->
            <label
              class="v-label v-field-label"
              for="input-0"
            >
              <!---->
              
              <!---->
              
            </label>
            
            
            <!---->
            <div
              class="v-field__input"
              data-no-activator=""
            >
              
              
              
              <!---->
              <!---->
              
              
              <div
                class="v-select__selection"
              >
                
                <i
                  aria-hidden="true"
                  class="mdi mdi-circle mdi v-icon notranslate v-theme--light v-icon--size-default mr-2"
                  data-v-f444dc92=""
                  style="color: #23AD5B; caret-color: #23AD5B;"
                />
                 Available to work
                
              </div>
              
              
              
              <input
                aria-describedby="input-0-messages"
                aria-label="Öffnen"
                id="input-0"
                inputmode="none"
                round=""
                size="1"
                title="Öffnen"
                type="text"
                value="available"
              />
            </div>
            <!---->
            
            
          </div>
          <!---->
          <div
            class="v-field__append-inner"
          >
            
            
            <!---->
            <i
              aria-hidden="true"
              class="mdi-menu-down mdi v-icon notranslate v-theme--light v-icon--size-default v-select__menu-icon"
            />
            
            
            <!---->
          </div>
          <div
            class="v-field__outline"
          >
            <!---->
            <!---->
          </div>
        </div>
        
      </div>
      <!---->
      <div
        class="v-input__details"
      >
        <transition-group-stub
          appear="false"
          aria-live="polite"
          class="v-messages"
          css="true"
          id="input-0-messages"
          name="slide-y-transition"
          persisted="false"
          role="alert"
          tag="div"
        >
          <!---->
        </transition-group-stub>
        <!---->
      </div>
    </div>
    
    <button
      class="name"
      data-v-f444dc92=""
    >
      name 
      <i
        aria-hidden="true"
        class="mdi mdi-pencil-outline mdi v-icon notranslate v-theme--light v-icon--size-default"
        data-v-f444dc92=""
      />
    </button>
    <button
      class="introduction"
      data-v-f444dc92=""
    >
      Meine Kurzvorstellung
    </button>
    
  </div>
  <button
    class="w-100"
    data-v-f444dc92=""
  >
    <ul
      class="details"
      data-v-589db232=""
      data-v-f444dc92=""
    >
      
      <li
        class="detail"
        data-v-589db232=""
      >
        <span
          class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail-chip border-thin"
          data-v-589db232=""
          draggable="false"
        >
          
          <!---->
          <span
            class="v-chip__underlay"
          />
          
          <!---->
          <!---->
          <div
            class="v-chip__content"
            data-no-activator=""
          >
            
            <i
              aria-hidden="true"
              class="mdi mdi-school-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
              data-v-589db232=""
            />
            <span
              class="detail-text"
              data-v-589db232=""
              tabindex="0"
              title="I am a student"
            >
              I am a student
            </span>
            <!--v-if-->
            
          </div>
          <!---->
          <!---->
        </span>
      </li>
      <li
        class="detail"
        data-v-589db232=""
      >
        <span
          class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail-chip border-thin"
          data-v-589db232=""
          draggable="false"
        >
          
          <!---->
          <span
            class="v-chip__underlay"
          />
          
          <!---->
          <!---->
          <div
            class="v-chip__content"
            data-no-activator=""
          >
            
            <i
              aria-hidden="true"
              class="mdi mdi-briefcase-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
              data-v-589db232=""
            />
            <span
              class="detail-text"
              data-v-589db232=""
              tabindex="0"
              title="I am a worker"
            >
              I am a worker
            </span>
            <!--v-if-->
            
          </div>
          <!---->
          <!---->
        </span>
      </li>
      <li
        class="detail"
        data-v-589db232=""
      >
        <span
          class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail-chip border-thin"
          data-v-589db232=""
          draggable="false"
        >
          
          <!---->
          <span
            class="v-chip__underlay"
          />
          
          <!---->
          <!---->
          <div
            class="v-chip__content"
            data-no-activator=""
          >
            
            <i
              aria-hidden="true"
              class="mdi mdi-briefcase-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
              data-v-589db232=""
            />
            <span
              class="detail-text"
              data-v-589db232=""
              tabindex="0"
              title="I really like my job"
            >
              I really like my job
            </span>
            <!--v-if-->
            
          </div>
          <!---->
          <!---->
        </span>
      </li>
      <li
        class="detail"
        data-v-589db232=""
      >
        <span
          class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail-chip border-thin"
          data-v-589db232=""
          draggable="false"
        >
          
          <!---->
          <span
            class="v-chip__underlay"
          />
          
          <!---->
          <!---->
          <div
            class="v-chip__content"
            data-no-activator=""
          >
            
            <i
              aria-hidden="true"
              class="mdi mdi-web mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
              data-v-589db232=""
            />
            <span
              class="detail-text"
              data-v-589db232=""
              tabindex="0"
              title="English"
            >
              English
            </span>
            <!--v-if-->
            
          </div>
          <!---->
          <!---->
        </span>
      </li>
      <li
        class="detail"
        data-v-589db232=""
      >
        <span
          class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail-chip border-thin"
          data-v-589db232=""
          draggable="false"
        >
          
          <!---->
          <span
            class="v-chip__underlay"
          />
          
          <!---->
          <!---->
          <div
            class="v-chip__content"
            data-no-activator=""
          >
            
            <i
              aria-hidden="true"
              class="mdi mdi-map-marker-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
              data-v-589db232=""
            />
            <span
              class="detail-text"
              data-v-589db232=""
              tabindex="0"
              title="Berlin"
            >
              Berlin
            </span>
            <!--v-if-->
            
          </div>
          <!---->
          <!---->
        </span>
      </li>
      <li
        class="detail"
        data-v-589db232=""
      >
        <span
          class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail-chip border-thin"
          data-v-589db232=""
          draggable="false"
        >
          
          <!---->
          <span
            class="v-chip__underlay"
          />
          
          <!---->
          <!---->
          <div
            class="v-chip__content"
            data-no-activator=""
          >
            
            <i
              aria-hidden="true"
              class="mdi mdi-emoticon-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
              data-v-589db232=""
            />
            <span
              class="detail-text"
              data-v-589db232=""
              tabindex="0"
              title="Yeah!"
            >
              Yeah!
            </span>
            <!--v-if-->
            
          </div>
          <!---->
          <!---->
        </span>
      </li>
      
    </ul>
  </button>
  <button
    class="social"
    data-v-f444dc92=""
  >
    <i
      aria-hidden="true"
      class="mdi mdi-share-variant-outline mdi v-icon notranslate v-theme--light v-icon--size-default mr-2"
      data-v-f444dc92=""
    />
    <ul
      class="social-list"
      data-v-f444dc92=""
    >
      
      <li
        data-v-f444dc92=""
      >
        <i
          aria-hidden="true"
          class="mdi mdi-instagram mdi v-icon notranslate v-theme--light v-icon--size-default"
          data-v-f444dc92=""
        />
      </li>
      <li
        data-v-f444dc92=""
      >
        <i
          aria-hidden="true"
          class="mdi mdi-facebook mdi v-icon notranslate v-theme--light v-icon--size-default"
          data-v-f444dc92=""
        />
      </li>
      <li
        data-v-f444dc92=""
      >
        <i
          aria-hidden="true"
          class="mdi mdi-linkedin mdi v-icon notranslate v-theme--light v-icon--size-default"
          data-v-f444dc92=""
        />
      </li>
      <li
        data-v-f444dc92=""
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate v-theme--light v-icon--size-default"
          data-v-f444dc92=""
        >
          <svg
            role="img"
            viewBox="-2 -2 28 28"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              X
            </title>
            <path
              d="M18.901 1.153h3.68l-8.04 9.19L24 22.846h-7.406l-5.8-7.584-6.638 7.584H.474l8.6-9.83L0 1.154h7.594l5.243 6.932ZM17.61 20.644h2.039L6.486 3.24H4.298Z"
              fill="currentColor"
            />
          </svg>
        </i>
      </li>
      <li
        data-v-f444dc92=""
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate v-theme--light v-icon--size-default"
          data-v-f444dc92=""
        >
          <svg
            role="img"
            viewBox="-2 -2 28 28"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Xing
            </title>
            <path
              d="M18.188 0c-.517 0-.741.325-.927.66 0 0-7.455 13.224-7.702 13.657.015.024 4.919 9.023 4.919 9.023.17.308.436.66.967.66h3.454c.211 0 .375-.078.463-.22.089-.151.089-.346-.009-.536l-4.879-8.916c-.004-.006-.004-.016 0-.022L22.139.756c.095-.191.097-.387.006-.535C22.056.078 21.894 0 21.686 0h-3.498zM3.648 4.74c-.211 0-.385.074-.473.216-.09.149-.078.339.02.531l2.34 4.05c.004.01.004.016 0 .021L1.86 16.051c-.099.188-.093.381 0 .529.085.142.239.234.45.234h3.461c.518 0 .766-.348.945-.667l3.734-6.609-2.378-4.155c-.172-.315-.434-.659-.962-.659H3.648v.016z"
              fill="currentColor"
            />
          </svg>
        </i>
      </li>
      <li
        data-v-f444dc92=""
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate v-theme--light v-icon--size-default"
          data-v-f444dc92=""
        >
          <svg
            role="img"
            viewBox="-2 -2 28 28"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Discord
            </title>
            <path
              d="M20.317 4.3698a19.7913 19.7913 0 00-4.8851-1.5152.0741.0741 0 00-.0785.0371c-.211.3753-.4447.8648-.6083 1.2495-1.8447-.2762-3.68-.2762-5.4868 0-.1636-.3933-.4058-.8742-.6177-1.2495a.077.077 0 00-.0785-.037 19.7363 19.7363 0 00-4.8852 1.515.0699.0699 0 00-.0321.0277C.5334 9.0458-.319 13.5799.0992 18.0578a.0824.0824 0 00.0312.0561c2.0528 1.5076 4.0413 2.4228 5.9929 3.0294a.0777.0777 0 00.0842-.0276c.4616-.6304.8731-1.2952 1.226-1.9942a.076.076 0 00-.0416-.1057c-.6528-.2476-1.2743-.5495-1.8722-.8923a.077.077 0 01-.0076-.1277c.1258-.0943.2517-.1923.3718-.2914a.0743.0743 0 01.0776-.0105c3.9278 1.7933 8.18 1.7933 12.0614 0a.0739.0739 0 01.0785.0095c.1202.099.246.1981.3728.2924a.077.077 0 01-.0066.1276 12.2986 12.2986 0 01-1.873.8914.0766.0766 0 00-.0407.1067c.3604.698.7719 1.3628 1.225 1.9932a.076.076 0 00.0842.0286c1.961-.6067 3.9495-1.5219 6.0023-3.0294a.077.077 0 00.0313-.0552c.5004-5.177-.8382-9.6739-3.5485-13.6604a.061.061 0 00-.0312-.0286zM8.02 15.3312c-1.1825 0-2.1569-1.0857-2.1569-2.419 0-1.3332.9555-2.4189 2.157-2.4189 1.2108 0 2.1757 1.0952 2.1568 2.419 0 1.3332-.9555 2.4189-2.1569 2.4189zm7.9748 0c-1.1825 0-2.1569-1.0857-2.1569-2.419 0-1.3332.9554-2.4189 2.1569-2.4189 1.2108 0 2.1757 1.0952 2.1568 2.419 0 1.3332-.946 2.4189-2.1568 2.4189Z"
              fill="currentColor"
            />
          </svg>
        </i>
      </li>
      <li
        data-v-f444dc92=""
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate v-theme--light v-icon--size-default"
          data-v-f444dc92=""
        >
          <svg
            role="img"
            viewBox="-2 -2 28 28"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Telegram
            </title>
            <path
              d="M11.944 0A12 12 0 0 0 0 12a12 12 0 0 0 12 12 12 12 0 0 0 12-12A12 12 0 0 0 12 0a12 12 0 0 0-.056 0zm4.962 7.224c.1-.002.321.023.465.14a.506.506 0 0 1 .171.325c.016.093.036.306.02.472-.18 1.898-.962 6.502-1.36 8.627-.168.9-.499 1.201-.82 1.23-.696.065-1.225-.46-1.9-.902-1.056-.693-1.653-1.124-2.678-1.8-1.185-.78-.417-1.21.258-1.91.177-.184 3.247-2.977 3.307-3.23.007-.032.014-.15-.056-.212s-.174-.041-.249-.024c-.106.024-1.793 1.14-5.061 3.345-.48.33-.913.49-1.302.48-.428-.008-1.252-.241-1.865-.44-.752-.245-1.349-.374-1.297-.789.027-.216.325-.437.893-.663 3.498-1.524 5.83-2.529 6.998-3.014 3.332-1.386 4.025-1.627 4.476-1.635z"
              fill="currentColor"
            />
          </svg>
        </i>
      </li>
      <li
        data-v-f444dc92=""
      >
        <i
          aria-hidden="true"
          class="mdi mdi-snapchat mdi v-icon notranslate v-theme--light v-icon--size-default"
          data-v-f444dc92=""
        />
      </li>
      <li
        data-v-f444dc92=""
      >
        <i
          aria-hidden="true"
          class="mdi mdi-reddit mdi v-icon notranslate v-theme--light v-icon--size-default"
          data-v-f444dc92=""
        />
      </li>
      <li
        data-v-f444dc92=""
      >
        <i
          aria-hidden="true"
          class="mdi mdi-whatsapp mdi v-icon notranslate v-theme--light v-icon--size-default"
          data-v-f444dc92=""
        />
      </li>
      <li
        data-v-f444dc92=""
      >
        <i
          aria-hidden="true"
          class="mdi mdi-pinterest mdi v-icon notranslate v-theme--light v-icon--size-default"
          data-v-f444dc92=""
        />
      </li>
      <li
        data-v-f444dc92=""
      >
        <i
          aria-hidden="true"
          class="mdi mdi-linkedin mdi v-icon notranslate v-theme--light v-icon--size-default"
          data-v-f444dc92=""
        />
      </li>
      
    </ul>
  </button>
  
  
</section>
`;

exports[`AboutMeView > renders initials 1`] = `
<section
  class="cockpit-card-variable-height cockpit-card"
  data-v-1451ba78=""
  data-v-d91b9f54=""
  data-v-f444dc92=""
  editable="false"
>
  <!--v-if-->
  <!--v-if-->
  
  
  <div
    class="header mb-2"
    data-v-f444dc92=""
  >
    <div
      class="v-avatar v-theme--light v-avatar--density-default v-avatar--variant-flat avatar d-flex align-center text-font"
      data-v-f444dc92=""
      style="width: 90px; height: 90px;"
    >
      
      
      <v-img-stub
        absolute="false"
        cover="false"
        data-v-f444dc92=""
        eager="false"
        inline="false"
        options="[object Object]"
        src="https://image.url/image.jpg"
        tile="false"
        transition="fade-transition"
      />
      
      
      
      <!---->
      <span
        class="v-avatar__underlay"
      />
      
    </div>
    <div
      class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-theme--light v-locale--is-ltr v-input--dirty v-text-field v-select v-select--single v-select--selected v-select--selection-slot availability"
      data-v-f444dc92=""
    >
      <!---->
      <div
        class="v-input__control"
      >
        
        <div
          class="v-field v-field--active v-field--appended v-field--center-affix v-field--dirty v-field--flat v-field--no-label v-field--variant-filled v-theme--light v-locale--is-ltr"
          role="combobox"
        >
          <div
            class="v-field__overlay"
          />
          <div
            class="v-field__loader"
          >
            <div
              aria-hidden="true"
              aria-valuemax="100"
              aria-valuemin="0"
              class="v-progress-linear v-theme--light v-locale--is-ltr"
              role="progressbar"
              style="top: 0px; height: 0px; --v-progress-linear-height: 2px;"
            >
              <!---->
              <div
                class="v-progress-linear__background"
                style="opacity: NaN;"
              />
              <div
                class="v-progress-linear__buffer"
                style="opacity: NaN; width: 0%;"
              />
              <transition-stub
                appear="false"
                css="true"
                name="fade-transition"
                persisted="false"
              >
                <div
                  class="v-progress-linear__indeterminate"
                >
                  
                  <div
                    class="v-progress-linear__indeterminate long"
                  />
                  <div
                    class="v-progress-linear__indeterminate short"
                  />
                  
                </div>
              </transition-stub>
              <!---->
            </div>
          </div>
          <!---->
          <div
            class="v-field__field"
            data-no-activator=""
          >
            <!---->
            <label
              class="v-label v-field-label"
              for="input-0"
            >
              <!---->
              
              <!---->
              
            </label>
            
            
            <!---->
            <div
              class="v-field__input"
              data-no-activator=""
            >
              
              
              
              <!---->
              <!---->
              
              
              <div
                class="v-select__selection"
              >
                
                <i
                  aria-hidden="true"
                  class="mdi mdi-circle mdi v-icon notranslate v-theme--light v-icon--size-default mr-2"
                  data-v-f444dc92=""
                  style="color: #23AD5B; caret-color: #23AD5B;"
                />
                 Available to work
                
              </div>
              
              
              
              <input
                aria-describedby="input-0-messages"
                aria-label="Öffnen"
                id="input-0"
                inputmode="none"
                round=""
                size="1"
                title="Öffnen"
                type="text"
                value="available"
              />
            </div>
            <!---->
            
            
          </div>
          <!---->
          <div
            class="v-field__append-inner"
          >
            
            
            <!---->
            <i
              aria-hidden="true"
              class="mdi-menu-down mdi v-icon notranslate v-theme--light v-icon--size-default v-select__menu-icon"
            />
            
            
            <!---->
          </div>
          <div
            class="v-field__outline"
          >
            <!---->
            <!---->
          </div>
        </div>
        
      </div>
      <!---->
      <div
        class="v-input__details"
      >
        <transition-group-stub
          appear="false"
          aria-live="polite"
          class="v-messages"
          css="true"
          id="input-0-messages"
          name="slide-y-transition"
          persisted="false"
          role="alert"
          tag="div"
        >
          <!---->
        </transition-group-stub>
        <!---->
      </div>
    </div>
    
    <button
      class="name"
      data-v-f444dc92=""
    >
      name 
      <i
        aria-hidden="true"
        class="mdi mdi-pencil-outline mdi v-icon notranslate v-theme--light v-icon--size-default"
        data-v-f444dc92=""
      />
    </button>
    <button
      class="introduction"
      data-v-f444dc92=""
    >
      Meine Kurzvorstellung
    </button>
    
  </div>
  <button
    class="w-100"
    data-v-f444dc92=""
  >
    <ul
      class="details"
      data-v-589db232=""
      data-v-f444dc92=""
    >
      
      <li
        class="detail"
        data-v-589db232=""
      >
        <span
          class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail-chip border-thin"
          data-v-589db232=""
          draggable="false"
        >
          
          <!---->
          <span
            class="v-chip__underlay"
          />
          
          <!---->
          <!---->
          <div
            class="v-chip__content"
            data-no-activator=""
          >
            
            <i
              aria-hidden="true"
              class="mdi mdi-school-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
              data-v-589db232=""
            />
            <span
              class="detail-text"
              data-v-589db232=""
              tabindex="0"
              title="I am a student"
            >
              I am a student
            </span>
            <!--v-if-->
            
          </div>
          <!---->
          <!---->
        </span>
      </li>
      <li
        class="detail"
        data-v-589db232=""
      >
        <span
          class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail-chip border-thin"
          data-v-589db232=""
          draggable="false"
        >
          
          <!---->
          <span
            class="v-chip__underlay"
          />
          
          <!---->
          <!---->
          <div
            class="v-chip__content"
            data-no-activator=""
          >
            
            <i
              aria-hidden="true"
              class="mdi mdi-briefcase-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
              data-v-589db232=""
            />
            <span
              class="detail-text"
              data-v-589db232=""
              tabindex="0"
              title="I am a worker"
            >
              I am a worker
            </span>
            <!--v-if-->
            
          </div>
          <!---->
          <!---->
        </span>
      </li>
      <li
        class="detail"
        data-v-589db232=""
      >
        <span
          class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail-chip border-thin"
          data-v-589db232=""
          draggable="false"
        >
          
          <!---->
          <span
            class="v-chip__underlay"
          />
          
          <!---->
          <!---->
          <div
            class="v-chip__content"
            data-no-activator=""
          >
            
            <i
              aria-hidden="true"
              class="mdi mdi-briefcase-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
              data-v-589db232=""
            />
            <span
              class="detail-text"
              data-v-589db232=""
              tabindex="0"
              title="I really like my job"
            >
              I really like my job
            </span>
            <!--v-if-->
            
          </div>
          <!---->
          <!---->
        </span>
      </li>
      <li
        class="detail"
        data-v-589db232=""
      >
        <span
          class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail-chip border-thin"
          data-v-589db232=""
          draggable="false"
        >
          
          <!---->
          <span
            class="v-chip__underlay"
          />
          
          <!---->
          <!---->
          <div
            class="v-chip__content"
            data-no-activator=""
          >
            
            <i
              aria-hidden="true"
              class="mdi mdi-web mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
              data-v-589db232=""
            />
            <span
              class="detail-text"
              data-v-589db232=""
              tabindex="0"
              title="English"
            >
              English
            </span>
            <!--v-if-->
            
          </div>
          <!---->
          <!---->
        </span>
      </li>
      <li
        class="detail"
        data-v-589db232=""
      >
        <span
          class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail-chip border-thin"
          data-v-589db232=""
          draggable="false"
        >
          
          <!---->
          <span
            class="v-chip__underlay"
          />
          
          <!---->
          <!---->
          <div
            class="v-chip__content"
            data-no-activator=""
          >
            
            <i
              aria-hidden="true"
              class="mdi mdi-map-marker-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
              data-v-589db232=""
            />
            <span
              class="detail-text"
              data-v-589db232=""
              tabindex="0"
              title="Berlin"
            >
              Berlin
            </span>
            <!--v-if-->
            
          </div>
          <!---->
          <!---->
        </span>
      </li>
      <li
        class="detail"
        data-v-589db232=""
      >
        <span
          class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail-chip border-thin"
          data-v-589db232=""
          draggable="false"
        >
          
          <!---->
          <span
            class="v-chip__underlay"
          />
          
          <!---->
          <!---->
          <div
            class="v-chip__content"
            data-no-activator=""
          >
            
            <i
              aria-hidden="true"
              class="mdi mdi-emoticon-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
              data-v-589db232=""
            />
            <span
              class="detail-text"
              data-v-589db232=""
              tabindex="0"
              title="Yeah!"
            >
              Yeah!
            </span>
            <!--v-if-->
            
          </div>
          <!---->
          <!---->
        </span>
      </li>
      
    </ul>
  </button>
  <button
    class="social"
    data-v-f444dc92=""
  >
    <i
      aria-hidden="true"
      class="mdi mdi-share-variant-outline mdi v-icon notranslate v-theme--light v-icon--size-default mr-2"
      data-v-f444dc92=""
    />
    <ul
      class="social-list"
      data-v-f444dc92=""
    >
      
      <li
        data-v-f444dc92=""
      >
        <i
          aria-hidden="true"
          class="mdi mdi-instagram mdi v-icon notranslate v-theme--light v-icon--size-default"
          data-v-f444dc92=""
        />
      </li>
      <li
        data-v-f444dc92=""
      >
        <i
          aria-hidden="true"
          class="mdi mdi-facebook mdi v-icon notranslate v-theme--light v-icon--size-default"
          data-v-f444dc92=""
        />
      </li>
      <li
        data-v-f444dc92=""
      >
        <i
          aria-hidden="true"
          class="mdi mdi-linkedin mdi v-icon notranslate v-theme--light v-icon--size-default"
          data-v-f444dc92=""
        />
      </li>
      <li
        data-v-f444dc92=""
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate v-theme--light v-icon--size-default"
          data-v-f444dc92=""
        >
          <svg
            role="img"
            viewBox="-2 -2 28 28"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              X
            </title>
            <path
              d="M18.901 1.153h3.68l-8.04 9.19L24 22.846h-7.406l-5.8-7.584-6.638 7.584H.474l8.6-9.83L0 1.154h7.594l5.243 6.932ZM17.61 20.644h2.039L6.486 3.24H4.298Z"
              fill="currentColor"
            />
          </svg>
        </i>
      </li>
      <li
        data-v-f444dc92=""
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate v-theme--light v-icon--size-default"
          data-v-f444dc92=""
        >
          <svg
            role="img"
            viewBox="-2 -2 28 28"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Xing
            </title>
            <path
              d="M18.188 0c-.517 0-.741.325-.927.66 0 0-7.455 13.224-7.702 13.657.015.024 4.919 9.023 4.919 9.023.17.308.436.66.967.66h3.454c.211 0 .375-.078.463-.22.089-.151.089-.346-.009-.536l-4.879-8.916c-.004-.006-.004-.016 0-.022L22.139.756c.095-.191.097-.387.006-.535C22.056.078 21.894 0 21.686 0h-3.498zM3.648 4.74c-.211 0-.385.074-.473.216-.09.149-.078.339.02.531l2.34 4.05c.004.01.004.016 0 .021L1.86 16.051c-.099.188-.093.381 0 .529.085.142.239.234.45.234h3.461c.518 0 .766-.348.945-.667l3.734-6.609-2.378-4.155c-.172-.315-.434-.659-.962-.659H3.648v.016z"
              fill="currentColor"
            />
          </svg>
        </i>
      </li>
      <li
        data-v-f444dc92=""
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate v-theme--light v-icon--size-default"
          data-v-f444dc92=""
        >
          <svg
            role="img"
            viewBox="-2 -2 28 28"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Discord
            </title>
            <path
              d="M20.317 4.3698a19.7913 19.7913 0 00-4.8851-1.5152.0741.0741 0 00-.0785.0371c-.211.3753-.4447.8648-.6083 1.2495-1.8447-.2762-3.68-.2762-5.4868 0-.1636-.3933-.4058-.8742-.6177-1.2495a.077.077 0 00-.0785-.037 19.7363 19.7363 0 00-4.8852 1.515.0699.0699 0 00-.0321.0277C.5334 9.0458-.319 13.5799.0992 18.0578a.0824.0824 0 00.0312.0561c2.0528 1.5076 4.0413 2.4228 5.9929 3.0294a.0777.0777 0 00.0842-.0276c.4616-.6304.8731-1.2952 1.226-1.9942a.076.076 0 00-.0416-.1057c-.6528-.2476-1.2743-.5495-1.8722-.8923a.077.077 0 01-.0076-.1277c.1258-.0943.2517-.1923.3718-.2914a.0743.0743 0 01.0776-.0105c3.9278 1.7933 8.18 1.7933 12.0614 0a.0739.0739 0 01.0785.0095c.1202.099.246.1981.3728.2924a.077.077 0 01-.0066.1276 12.2986 12.2986 0 01-1.873.8914.0766.0766 0 00-.0407.1067c.3604.698.7719 1.3628 1.225 1.9932a.076.076 0 00.0842.0286c1.961-.6067 3.9495-1.5219 6.0023-3.0294a.077.077 0 00.0313-.0552c.5004-5.177-.8382-9.6739-3.5485-13.6604a.061.061 0 00-.0312-.0286zM8.02 15.3312c-1.1825 0-2.1569-1.0857-2.1569-2.419 0-1.3332.9555-2.4189 2.157-2.4189 1.2108 0 2.1757 1.0952 2.1568 2.419 0 1.3332-.9555 2.4189-2.1569 2.4189zm7.9748 0c-1.1825 0-2.1569-1.0857-2.1569-2.419 0-1.3332.9554-2.4189 2.1569-2.4189 1.2108 0 2.1757 1.0952 2.1568 2.419 0 1.3332-.946 2.4189-2.1568 2.4189Z"
              fill="currentColor"
            />
          </svg>
        </i>
      </li>
      <li
        data-v-f444dc92=""
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate v-theme--light v-icon--size-default"
          data-v-f444dc92=""
        >
          <svg
            role="img"
            viewBox="-2 -2 28 28"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Telegram
            </title>
            <path
              d="M11.944 0A12 12 0 0 0 0 12a12 12 0 0 0 12 12 12 12 0 0 0 12-12A12 12 0 0 0 12 0a12 12 0 0 0-.056 0zm4.962 7.224c.1-.002.321.023.465.14a.506.506 0 0 1 .171.325c.016.093.036.306.02.472-.18 1.898-.962 6.502-1.36 8.627-.168.9-.499 1.201-.82 1.23-.696.065-1.225-.46-1.9-.902-1.056-.693-1.653-1.124-2.678-1.8-1.185-.78-.417-1.21.258-1.91.177-.184 3.247-2.977 3.307-3.23.007-.032.014-.15-.056-.212s-.174-.041-.249-.024c-.106.024-1.793 1.14-5.061 3.345-.48.33-.913.49-1.302.48-.428-.008-1.252-.241-1.865-.44-.752-.245-1.349-.374-1.297-.789.027-.216.325-.437.893-.663 3.498-1.524 5.83-2.529 6.998-3.014 3.332-1.386 4.025-1.627 4.476-1.635z"
              fill="currentColor"
            />
          </svg>
        </i>
      </li>
      <li
        data-v-f444dc92=""
      >
        <i
          aria-hidden="true"
          class="mdi mdi-snapchat mdi v-icon notranslate v-theme--light v-icon--size-default"
          data-v-f444dc92=""
        />
      </li>
      <li
        data-v-f444dc92=""
      >
        <i
          aria-hidden="true"
          class="mdi mdi-reddit mdi v-icon notranslate v-theme--light v-icon--size-default"
          data-v-f444dc92=""
        />
      </li>
      <li
        data-v-f444dc92=""
      >
        <i
          aria-hidden="true"
          class="mdi mdi-whatsapp mdi v-icon notranslate v-theme--light v-icon--size-default"
          data-v-f444dc92=""
        />
      </li>
      <li
        data-v-f444dc92=""
      >
        <i
          aria-hidden="true"
          class="mdi mdi-pinterest mdi v-icon notranslate v-theme--light v-icon--size-default"
          data-v-f444dc92=""
        />
      </li>
      <li
        data-v-f444dc92=""
      >
        <i
          aria-hidden="true"
          class="mdi mdi-linkedin mdi v-icon notranslate v-theme--light v-icon--size-default"
          data-v-f444dc92=""
        />
      </li>
      
    </ul>
  </button>
  
  
</section>
`;

exports[`AboutMeView > renders without social media accounts 1`] = `
<section
  class="cockpit-card-variable-height cockpit-card"
  data-v-1451ba78=""
  data-v-d91b9f54=""
  data-v-f444dc92=""
  editable="false"
>
  <!--v-if-->
  <!--v-if-->
  
  
  <div
    class="header mb-2"
    data-v-f444dc92=""
  >
    <div
      class="v-avatar v-theme--light v-avatar--density-default v-avatar--variant-flat avatar d-flex align-center text-font"
      data-v-f444dc92=""
      style="width: 90px; height: 90px;"
    >
      
      
      <v-img-stub
        absolute="false"
        cover="false"
        data-v-f444dc92=""
        eager="false"
        inline="false"
        options="[object Object]"
        src="https://image.url/image.jpg"
        tile="false"
        transition="fade-transition"
      />
      
      
      
      <!---->
      <span
        class="v-avatar__underlay"
      />
      
    </div>
    <div
      class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-theme--light v-locale--is-ltr v-input--dirty v-text-field v-select v-select--single v-select--selected v-select--selection-slot availability"
      data-v-f444dc92=""
    >
      <!---->
      <div
        class="v-input__control"
      >
        
        <div
          class="v-field v-field--active v-field--appended v-field--center-affix v-field--dirty v-field--flat v-field--no-label v-field--variant-filled v-theme--light v-locale--is-ltr"
          role="combobox"
        >
          <div
            class="v-field__overlay"
          />
          <div
            class="v-field__loader"
          >
            <div
              aria-hidden="true"
              aria-valuemax="100"
              aria-valuemin="0"
              class="v-progress-linear v-theme--light v-locale--is-ltr"
              role="progressbar"
              style="top: 0px; height: 0px; --v-progress-linear-height: 2px;"
            >
              <!---->
              <div
                class="v-progress-linear__background"
                style="opacity: NaN;"
              />
              <div
                class="v-progress-linear__buffer"
                style="opacity: NaN; width: 0%;"
              />
              <transition-stub
                appear="false"
                css="true"
                name="fade-transition"
                persisted="false"
              >
                <div
                  class="v-progress-linear__indeterminate"
                >
                  
                  <div
                    class="v-progress-linear__indeterminate long"
                  />
                  <div
                    class="v-progress-linear__indeterminate short"
                  />
                  
                </div>
              </transition-stub>
              <!---->
            </div>
          </div>
          <!---->
          <div
            class="v-field__field"
            data-no-activator=""
          >
            <!---->
            <label
              class="v-label v-field-label"
              for="input-0"
            >
              <!---->
              
              <!---->
              
            </label>
            
            
            <!---->
            <div
              class="v-field__input"
              data-no-activator=""
            >
              
              
              
              <!---->
              <!---->
              
              
              <div
                class="v-select__selection"
              >
                
                <i
                  aria-hidden="true"
                  class="mdi mdi-circle mdi v-icon notranslate v-theme--light v-icon--size-default mr-2"
                  data-v-f444dc92=""
                  style="color: #23AD5B; caret-color: #23AD5B;"
                />
                 Available to work
                
              </div>
              
              
              
              <input
                aria-describedby="input-0-messages"
                aria-label="Öffnen"
                id="input-0"
                inputmode="none"
                round=""
                size="1"
                title="Öffnen"
                type="text"
                value="available"
              />
            </div>
            <!---->
            
            
          </div>
          <!---->
          <div
            class="v-field__append-inner"
          >
            
            
            <!---->
            <i
              aria-hidden="true"
              class="mdi-menu-down mdi v-icon notranslate v-theme--light v-icon--size-default v-select__menu-icon"
            />
            
            
            <!---->
          </div>
          <div
            class="v-field__outline"
          >
            <!---->
            <!---->
          </div>
        </div>
        
      </div>
      <!---->
      <div
        class="v-input__details"
      >
        <transition-group-stub
          appear="false"
          aria-live="polite"
          class="v-messages"
          css="true"
          id="input-0-messages"
          name="slide-y-transition"
          persisted="false"
          role="alert"
          tag="div"
        >
          <!---->
        </transition-group-stub>
        <!---->
      </div>
    </div>
    
    <button
      class="name"
      data-v-f444dc92=""
    >
      name 
      <i
        aria-hidden="true"
        class="mdi mdi-pencil-outline mdi v-icon notranslate v-theme--light v-icon--size-default"
        data-v-f444dc92=""
      />
    </button>
    <button
      class="introduction"
      data-v-f444dc92=""
    >
      Meine Kurzvorstellung
    </button>
    
  </div>
  <button
    class="w-100"
    data-v-f444dc92=""
  >
    <ul
      class="details"
      data-v-589db232=""
      data-v-f444dc92=""
    >
      
      <li
        class="detail"
        data-v-589db232=""
      >
        <span
          class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail-chip border-thin"
          data-v-589db232=""
          draggable="false"
        >
          
          <!---->
          <span
            class="v-chip__underlay"
          />
          
          <!---->
          <!---->
          <div
            class="v-chip__content"
            data-no-activator=""
          >
            
            <i
              aria-hidden="true"
              class="mdi mdi-school-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
              data-v-589db232=""
            />
            <span
              class="detail-text"
              data-v-589db232=""
              tabindex="0"
              title="I am a student"
            >
              I am a student
            </span>
            <!--v-if-->
            
          </div>
          <!---->
          <!---->
        </span>
      </li>
      <li
        class="detail"
        data-v-589db232=""
      >
        <span
          class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail-chip border-thin"
          data-v-589db232=""
          draggable="false"
        >
          
          <!---->
          <span
            class="v-chip__underlay"
          />
          
          <!---->
          <!---->
          <div
            class="v-chip__content"
            data-no-activator=""
          >
            
            <i
              aria-hidden="true"
              class="mdi mdi-briefcase-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
              data-v-589db232=""
            />
            <span
              class="detail-text"
              data-v-589db232=""
              tabindex="0"
              title="I am a worker"
            >
              I am a worker
            </span>
            <!--v-if-->
            
          </div>
          <!---->
          <!---->
        </span>
      </li>
      <li
        class="detail"
        data-v-589db232=""
      >
        <span
          class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail-chip border-thin"
          data-v-589db232=""
          draggable="false"
        >
          
          <!---->
          <span
            class="v-chip__underlay"
          />
          
          <!---->
          <!---->
          <div
            class="v-chip__content"
            data-no-activator=""
          >
            
            <i
              aria-hidden="true"
              class="mdi mdi-briefcase-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
              data-v-589db232=""
            />
            <span
              class="detail-text"
              data-v-589db232=""
              tabindex="0"
              title="I really like my job"
            >
              I really like my job
            </span>
            <!--v-if-->
            
          </div>
          <!---->
          <!---->
        </span>
      </li>
      <li
        class="detail"
        data-v-589db232=""
      >
        <span
          class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail-chip border-thin"
          data-v-589db232=""
          draggable="false"
        >
          
          <!---->
          <span
            class="v-chip__underlay"
          />
          
          <!---->
          <!---->
          <div
            class="v-chip__content"
            data-no-activator=""
          >
            
            <i
              aria-hidden="true"
              class="mdi mdi-web mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
              data-v-589db232=""
            />
            <span
              class="detail-text"
              data-v-589db232=""
              tabindex="0"
              title="English"
            >
              English
            </span>
            <!--v-if-->
            
          </div>
          <!---->
          <!---->
        </span>
      </li>
      <li
        class="detail"
        data-v-589db232=""
      >
        <span
          class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail-chip border-thin"
          data-v-589db232=""
          draggable="false"
        >
          
          <!---->
          <span
            class="v-chip__underlay"
          />
          
          <!---->
          <!---->
          <div
            class="v-chip__content"
            data-no-activator=""
          >
            
            <i
              aria-hidden="true"
              class="mdi mdi-map-marker-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
              data-v-589db232=""
            />
            <span
              class="detail-text"
              data-v-589db232=""
              tabindex="0"
              title="Berlin"
            >
              Berlin
            </span>
            <!--v-if-->
            
          </div>
          <!---->
          <!---->
        </span>
      </li>
      <li
        class="detail"
        data-v-589db232=""
      >
        <span
          class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail-chip border-thin"
          data-v-589db232=""
          draggable="false"
        >
          
          <!---->
          <span
            class="v-chip__underlay"
          />
          
          <!---->
          <!---->
          <div
            class="v-chip__content"
            data-no-activator=""
          >
            
            <i
              aria-hidden="true"
              class="mdi mdi-emoticon-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
              data-v-589db232=""
            />
            <span
              class="detail-text"
              data-v-589db232=""
              tabindex="0"
              title="Yeah!"
            >
              Yeah!
            </span>
            <!--v-if-->
            
          </div>
          <!---->
          <!---->
        </span>
      </li>
      
    </ul>
  </button>
  <button
    class="social"
    data-v-f444dc92=""
  >
    <i
      aria-hidden="true"
      class="mdi mdi-share-variant-outline mdi v-icon notranslate v-theme--light v-icon--size-default mr-2"
      data-v-f444dc92=""
    />
    <span
      data-v-f444dc92=""
    >
      $t('cockpit.about-me.empty-social-media')
    </span>
  </button>
  
  
</section>
`;
